--- a/gulp/package.json
+++ b/gulp/package.json
@@ -8,16 +8,16 @@
   "devDependencies": {
     "browser-sync": "^1.3.3",
     "gulp": "^3.8.7",
-    "gulp-autoprefixer": "0.0.8",
+    "gulp-autoprefixer": "^1.0.1",
     "gulp-clean": "^0.3.1",
     "gulp-csso": "^0.2.9",
     "gulp-if": "^1.2.2",
-    "gulp-notify": "^1.4.2",
+    "gulp-notify": "^2.0.0",
     "gulp-ruby-sass": "^0.7.1",
-    "gulp-uglify": "^0.3.1",
+    "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.0",
-    "gulp-watch": "^0.6.8",
-    "gulp-webpack": "^0.2.0",
+    "gulp-watch": "^1.1.0",
+    "gulp-webpack": "^1.0.0",
     "yargs": "^1.2.6"
   }
 }
